syntax = "proto3";

package msw.server.core.common;

message ServerResponse {
  bool successful = 1;
  string response = 2;
}