syntax = "proto3";

option java_multiple_files = true;
option java_package = "msw.server.rpc.instances";
option java_outer_classname = "StartInstanceRequestProto";

package msw.server.rpc.instances;

import "msw/server/core/watcher/InstanceConfiguration.proto";

message StartInstanceRequest {
  int32 port = 1;
  string worldName = 2;
  msw.server.core.watcher.InstanceConfiguration config = 3;
}